force-app/main/default/objects/Revenue_Billing_Batch__c/Revenue_Billing_Batch__c.object-meta.xml
<CustomObject>
    <label>Revenue Billing Batch</label>
    <nameField>
        <displayFormat>BATCH-{YYYY}{0000}</displayFormat>
        <label>Revenue Billing Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Billing Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>