force-app/main/default/objects/Revenue_Billing_Batch__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Revenue Billing Batches</relationshipLabel>
    <relationshipName>Revenue_Billing_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>