force-app/main/default/objects/Revenue_Billing_Batch__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Revenue_Billing_Event__c.Event_Amount__c</summarizedField>
    <summaryForeignKey>Revenue_Billing_Event__c.Revenue_Billing_Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>