force-app/main/default/objects/Revenue_Billing_Batch__c/fields/Total_Processed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Processed_Amount__c</fullName>
    <label>Total Processed Amount</label>
    <summarizedField>Revenue_Billing_Event__c.Event_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Revenue_Billing_Event__c.ERP_Event_ID__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Revenue_Billing_Event__c.Revenue_Billing_Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>