force-app/main/default/objects/Revenue_Billing_Batch__c/fields/Total_Processed_Event_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Processed_Event_Count__c</fullName>
    <description>Number of events under this batch that have been processed.</description>
    <label>Total Processed Event Count</label>
    <summaryFilterItems>
        <field>Revenue_Billing_Event__c.ERP_Event_ID__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Revenue_Billing_Event__c.Revenue_Billing_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>